Fix visibility of library button when collapsed

--- a/app.css
+++ b/app.css
@@ -191,8 +191,9 @@ NAVIGATION BAR
   color: var(--spice-subtext);
 }
 
-.main-yourLibraryX-collapseButton.iYP0xuQiJCgi7gx1jUPJ .Gj4v3278oIywygaUyBbt {
+.main-yourLibraryX-collapseButton.iYP0xuQiJCgi7gx1jUPJ button:hover .Gj4v3278oIywygaUyBbt {
   opacity: 0;
+  transition: opacity 0.375s;
 }
 
 .main-navBar-navBarLinkActive,
